# cod

./: README.markdown  cod.cabal  stack.yaml
src/lib/: Cod.hs
src/test/: Main.hs
