build-type: Simple
cabal-version: >= 1.8
category: Documentation
description: Cod quickly generates Haskell documentation.
extra-source-files: README.markdown
license-file: LICENSE.markdown
license: ISC
maintainer: Taylor Fausak
name: cod
synopsis: Quickly generate Haskell documentation.
version: 0.0.0.0

source-repository head
  location: https://github.com/tfausak/cod
  type: git

library
  autogen-modules: Paths_cod
  build-depends:
    base >= 4.14.0 && < 4.15
    , bytestring >= 0.10.10 && < 0.11
    , cpphs >= 1.20.9 && < 1.21
    , filepath >= 1.4.2 && < 1.5
    , ghc >= 8.10.1 && < 8.11
    , ghc-boot-th >= 8.10.1 && < 8.11
    , ghc-paths >= 0.1.0 && < 0.2
    , text >= 1.2.3 && < 1.3
  exposed-modules: Cod
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies
    -Wno-missing-exported-signatures
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe
  hs-source-dirs: src/lib
  other-modules: Paths_cod

test-suite test
  build-depends:
    base
    , bytestring
    , cod
    , ghc-boot-th
    , HUnit >= 1.6.0 && < 1.7
  hs-source-dirs: src/test
  main-is: Main.hs
  type: exitcode-stdio-1.0
