build-type: Simple
cabal-version: >= 1.2
name: cod
version: 0.0.0.0

library
  build-depends:
    base >= 4.14.0 && < 4.15
    , bytestring >= 0.10.10 && < 0.11
    , ghc >= 8.10.1 && < 8.11
    , ghc-boot-th >= 8.10.1 && < 8.11
  exposed-modules: Cod
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies
    -Wno-missing-exported-signatures
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe
  hs-source-dirs: src/lib
